@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2002, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2002, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -165,8 +165,6 @@ public class Launcher extends DebugeeBinder {
         if (argumentHandler.isLaunchingConnector()) {
             boolean vthreadMode = "Virtual".equals(System.getProperty("main.wrapper"));
             if (vthreadMode) {
-                /* Need --enable-preview on the debuggee in order to support virtual threads. */
-                args.add("-R--enable-preview");
                 /* Some tests need more carrier threads than the default provided. */
                 args.add("-R-Djdk.virtualThreadScheduler.parallelism=15");
             }
